# mandos

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md
backend/: pyproject.toml  requirements.txt
backend/api/: admin.py  models.py  serializers.py  urls.py
backend/api/migrations/: 0001_initial.py  0002_demomodel.py
backend/api/tasks/: urls.py  views.py
backend/config/: settings.py
backend/tasks/: admin.py  models.py
backend/tasks/migrations/: 0001_initial.py
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/components/: tasks.jsx
