[tool.poetry]
name = "mandos"
version = "0.1.0"
description = "Ridiculously Simple ToDo App With DRF and ReactJS"
authors = ["Reganto <tell.reganto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
django-ptpython = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
